Additional output fields for the JSON response panl.results.fields.all -> panl.results.fields.default CaFS -> CaFUPs

--- a/example.panl.properties
+++ b/example.panl.properties
@@ -414,11 +414,12 @@ o
 # Below are the fields that are configured to be returned for the query, these
 # fields are added to the query and must match the solr fields.
 #
-# By default, the panl.results.fields.all always exists - even if it is not
-# included in these properties file - it is included here for reference for all
-# the fields that are stored by the solr engine.
+# The panl.results.fields.default always exists - even if it is not included
+# in this properties file - it is included here for reference for so that you
+# may choose the fields that you wish to have the Solr engine to return.
 #
 # As an example, another property:
+#
 #   panl.results.fields.firstfive
 #
 # was also automatically generated with only the first five fields.  You may
@@ -428,7 +429,7 @@ o
 #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-panl.results.fields.all=id,\
+panl.results.fields.default=id,\
 pre,\
 sku,\
 name,\
