--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -498,13 +498,17 @@ panl.lpse.order=z,b,m,W,G,C,L,D,h,I,u,Z,9,w,s,p,n,o,q
 # Below are the fields that are configured to be returned for the query, these
 # fields are added to the query and must match the solr fields.
 #
-# By default, the panl.results.fields.all always exists - even if it is not
-# included in these properties file - it is included here for reference for all
-# the fields that are stored by the solr engine.
+# The panl.results.fields.default always exists - even if it is not included
+# in this properties file - it is included here for reference for so that you
+# may choose the fields that you wish to have the Solr engine to return.
+#
+# If the panl.results.fields.default property is not found , or is an empty
+# string, then by default, Solr will return all fields - which you may not
+# want
 #
 # As an example, another property:
 #
-#     panl.results.fields.firstfive
+#   panl.results.fields.firstfive
 #
 # was also automatically generated with only the first five fields.  You may
 # rename, delete or add any of the results fields as you wish (remembering that
@@ -514,7 +518,7 @@ panl.lpse.order=z,b,m,W,G,C,L,D,h,I,u,Z,9,w,s,p,n,o,q
 #                                ~ ~ ~ * ~ ~ ~
 
 
-panl.results.fields.all=brand,name,mechanism_type,nib_shape,body_shape,grip_type,grip_shape,cap_shape,category,length,relative_length,diameter,weight,relative_weight,lead_length,disassemble,nib_material,mechanism_material,grip_material,body_material,tubing_material,clip_material,cap_material,hardness_indicator,lead_grade_indicator,lead_size_indicator,colours,variants
+panl.results.fields.default=brand,name,mechanism_type,nib_shape,body_shape,grip_type,grip_shape,cap_shape,category,length,relative_length,diameter,weight,relative_weight,lead_length,disassemble,nib_material,mechanism_material,grip_material,body_material,tubing_material,clip_material,cap_material,hardness_indicator,lead_grade_indicator,lead_size_indicator,colours,variants
 
 panl.results.fields.firstfive=brand,name,category,mechanism_type,weight
 
