--- a/src/main/resources/collection.panl.template.properties
+++ b/src/main/resources/collection.panl.template.properties
@@ -308,7 +308,7 @@ $panl.lpse.order
 # Below are the fields that are configured to be returned for the query, these
 # fields are added to the query and must match the solr fields.
 #
-# By default, the panl.results.fields.all always exists - even if it is not
+# By default, the panl.results.fields.default always exists - even if it is not
 # included in these properties file - it is included here for reference for all
 # the fields that are stored by the solr engine.
 #
@@ -323,7 +323,7 @@ $panl.lpse.order
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-$panl.results.fields.all
+$panl.results.fields.default
 $panl.results.fields.firstfive
 
 #                      Panl Sort Field Configuration
