--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -518,9 +518,41 @@ panl.lpse.order=z,b,m,W,G,C,L,D,h,I,u,Z,9,w,s,p,n,o,q
 #                                ~ ~ ~ * ~ ~ ~
 
 
-panl.results.fields.default=brand,name,mechanism_type,nib_shape,body_shape,grip_type,grip_shape,cap_shape,category,length,relative_length,diameter,weight,relative_weight,lead_length,disassemble,nib_material,mechanism_material,grip_material,body_material,tubing_material,clip_material,cap_material,hardness_indicator,lead_grade_indicator,lead_size_indicator,colours,variants
+panl.results.fields.default=brand,\
+  name,\
+  mechanism_type,\
+  nib_shape,\
+  body_shape,\
+  grip_type,\
+  grip_shape,\
+  cap_shape,\
+  category,\
+  length,\
+  relative_length,\
+  diameter,\
+  weight,\
+  relative_weight,\
+  lead_length,\
+  disassemble,\
+  nib_material,\
+  mechanism_material,\
+  grip_material,\
+  body_material,\
+  tubing_material,\
+  clip_material,\
+  cap_material,\
+  hardness_indicator,\
+  lead_grade_indicator,\
+  lead_size_indicator,\
+  colours,\
+  variants,\
+  description
 
-panl.results.fields.firstfive=brand,name,category,mechanism_type,weight
+panl.results.fields.firstfive=brand,\
+  name,\
+  category,\
+  mechanism_type,\
+  weight
 
 #                      Panl Sort Field Configuration
 #                      ---- ---- ----- -------------
