Added in more pagination tests.  Extracted method for invoking AvailableProcessor

--- a/src/test/resources/page/num-rows-prefix.properties
+++ b/src/test/resources/page/num-rows-prefix.properties
@@ -6,6 +6,8 @@ panl.param.page=p
 panl.param.page.prefix=page-prefix-
 panl.param.page.suffix=-page-suffix
 panl.param.numrows=n
+panl.param.numrows.prefix=num-rows-prefix-
+panl.param.numrows.suffix=
 panl.param.query.operand=o
 panl.param.passthrough=z
 solr.facet.min.count=1
