refactored property file names

--- a/src/test/resources/page/suffix.properties
+++ b/src/test/resources/page/suffix.properties
@@ -3,10 +3,10 @@ panl.param.query=q
 panl.param.sort=s
 
 panl.param.page=p
-panl.param.page.prefix=page-prefix-
+panl.param.page.prefix=
 panl.param.page.suffix=-page-suffix
 panl.param.numrows=n
-panl.param.numrows.prefix=num-rows-prefix-
+panl.param.numrows.prefix=
 panl.param.numrows.suffix=-num-rows-suffix
 panl.param.query.operand=o
 panl.param.passthrough=z
@@ -16,4 +16,9 @@ solr.facet.min.count=1
 panl.facet.w=weight
 panl.name.w=Weight
 panl.type.w=solr.IntPointField
-panl.lpse.order=w,q,s,p,n,o,z
+
+panl.facet.b=brand
+panl.name.b=Brand
+panl.type.b=solr.StringField
+
+panl.lpse.order=w,q,s,p,n,o,z,b
