--- a/src/test/resources/page/prefix.properties
+++ b/src/test/resources/page/prefix.properties
@@ -3,7 +3,11 @@ panl.param.query=q
 panl.param.sort=s
 
 panl.param.page=p
+panl.param.page.prefix=page-prefix-
+panl.param.page.suffix=
 panl.param.numrows=n
+panl.param.numrows.prefix=num-rows-prefix-
+panl.param.numrows.suffix=
 panl.param.query.operand=o
 panl.param.passthrough=z
 solr.facet.min.count=1
@@ -12,4 +16,9 @@ solr.facet.min.count=1
 panl.facet.w=weight
 panl.name.w=Weight
 panl.type.w=solr.IntPointField
-panl.lpse.order=w,q,s,p,n,o,z
+
+panl.facet.b=brand
+panl.name.b=Brand
+panl.type.b=solr.StringField
+
+panl.lpse.order=w,q,s,p,n,o,z,b
