Additional canonical URI tests

--- a/src/test/resources/default.properties
+++ b/src/test/resources/default.properties
@@ -12,6 +12,9 @@ solr.facet.min.count=1
 panl.facet.w=weight
 panl.name.w=Weight
 panl.type.w=solr.IntPointField
+panl.range.facet.w=true
+panl.range.min.w=10
+panl.range.max.w=50
 
 panl.facet.b=brand
 panl.name.b=Brand
