Added in more tests, made the sort fields an array in order of the property in the JSON response

--- a/src/test/resources/default.properties
+++ b/src/test/resources/default.properties
@@ -20,5 +20,9 @@ panl.facet.b=brand
 panl.name.b=Brand
 panl.type.b=solr.StringField
 
-panl.lpse.order=w,q,s,p,n,o,z,b
+panl.facet.m=name
+panl.name.m=Model Name
+panl.type.m=solr.StringField
+
+panl.lpse.order=w,m,q,s,p,n,o,z,b
 panl.sort.fields=brand,weight
