Added in new fieldset to test multiple sorting options

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -554,6 +554,9 @@ panl.results.fields.firstfive=brand,\
   mechanism_type,\
   weight
 
+panl.results.fields.brandandname=brand,\
+  name
+
 #                      Panl Sort Field Configuration
 #                      ---- ---- ----- -------------
 # Below are the fields that are configured to be able to be sorted on, these
