Fixed sorting LPSE code order and added in add_asc and add_desc JSON keys for sort ordering

--- a/src/test/resources/default.properties
+++ b/src/test/resources/default.properties
@@ -24,5 +24,15 @@ panl.facet.m=name
 panl.name.m=Model Name
 panl.type.m=solr.StringField
 
-panl.lpse.order=w,m,q,s,p,n,o,z,b
-panl.sort.fields=brand,weight
+# <field "indexed"="true" "stored"="true" "name"="disassemble" "type"="boolean" "multiValued"="false" />
+panl.facet.D=disassemble
+panl.name.D=Disassemble
+panl.type.D=solr.BoolField
+# Because this is a Boolean field, you can change these values to something more human-readable
+panl.bool.D.true=able to be
+panl.bool.D.false=cannot be
+panl.suffix.D=\ disassembled
+
+panl.lpse.order=w,m,D,q,s,p,n,o,z,b
+
+panl.sort.fields=brand,name,weight,disassemble
