Fixed passthrough parameter

--- a/mechanical-pencils.panl.lpse.length.2.properties
+++ b/mechanical-pencils.panl.lpse.length.2.properties
@@ -491,7 +491,7 @@ panl.type.WW=solr.StrField
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.lpse.order=zz,bb,mm,WW,GG,CC,LL,DD,hh,II,uu,ZZ,99,ww,s,p,n,o,q
+panl.lpse.order=z,bb,mm,WW,GG,CC,LL,DD,hh,II,uu,ZZ,99,ww,s,p,n,o,q
 
 #                       Panl Results Field Configuration
 #                       ---- ------- ----- -------------
