updated from dualrange to nouislider

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -362,8 +362,8 @@ panl.range.max.w=50
 panl.range.prefix.w=weighing from 
 panl.range.midfix.w=\ to 
 panl.range.suffix.w=\ grams
-panl.range.min.value.w=light
-panl.range.max.value.w=a lot of
+panl.range.min.value.w=from light
+panl.range.max.value.w=\ heavy pencils
 
 # <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
 panl.field.R=relative_weight
