--- a/src/test/resources/default.properties
+++ b/src/test/resources/default.properties
@@ -15,6 +15,8 @@ panl.type.w=solr.IntPointField
 panl.range.facet.w=true
 panl.range.min.w=10
 panl.range.max.w=50
+panl.range.min.value.w=from light
+panl.range.max.value.w=\ heavy pencils
 
 panl.facet.b=brand
 panl.name.b=Brand
