--- a/src/test/resources/range/prefix-suffix.properties
+++ b/src/test/resources/range/prefix-suffix.properties
@@ -19,6 +19,6 @@ panl.range.min.w=10
 panl.range.max.w=50
 panl.range.prefix.w=PANL_WONT_APPEAR
 panl.range.suffix.w=PANL_WONT_APPEAR
-panl.range.min.value.w=PANL_WONT_APPEAR
-panl.range.max.value.w=PANL_WONT_APPEAR
+panl.range.min.value.w=from light
+panl.range.max.value.w=heavy pencils
 panl.lpse.order=w,q,s,p,n,o,z
