Fixed min/max value replacements

--- a/src/test/resources/range/prefix-midfix.properties
+++ b/src/test/resources/range/prefix-midfix.properties
@@ -17,8 +17,8 @@ panl.prefix.w=PANL_WONT_APPEAR
 panl.range.facet.w=true
 panl.range.min.w=10
 panl.range.max.w=50
-panl.range.prefix.w=weighing from 
+panl.range.prefix.w=weighing 
 panl.range.midfix.w=\ to 
-panl.range.min.value.w=light
-panl.range.max.value.w=a lot of
+panl.range.min.value.w=from light
+panl.range.max.value.w=heavy pencils
 panl.lpse.order=w,q,s,p,n,o,z
