--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -363,7 +363,7 @@ panl.range.prefix.w=weighing from
 panl.range.midfix.w=\ to 
 panl.range.suffix.w=\ grams
 panl.range.min.value.w=from light
-panl.range.max.value.w=\ heavy pencils
+panl.range.max.value.w=heavy pencils
 
 # <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
 panl.field.R=relative_weight
