Additional testing and fixes

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -355,7 +355,7 @@ panl.type.d=solr.IntPointField
 panl.facet.w=weight
 panl.name.w=Weight
 panl.type.w=solr.IntPointField
-panl.suffix.w=\ grams
+panl.suffix.w=\ gramssuf
 panl.range.facet.w=true
 panl.range.min.w=10
 panl.range.max.w=50
