--- a/src/test/resources/range/appendages/midfix/midfix-rs-min.properties
+++ b/src/test/resources/range/appendages/midfix/midfix-rs-min.properties
@@ -12,9 +12,11 @@ panl.facet.w=weight
 panl.name.w=Weight
 panl.type.w=solr.IntPointField
 panl.range.midfix.w=\ to 
-panl.prefix.w=weight 
+panl.range.suffix.w=\ grams
 panl.range.facet.w=true
 panl.range.min.w=10
 panl.range.max.w=50
+
+panl.range.min.value.w=from light
+
 panl.lpse.order=w,q,s,p,n,o
-panl.range.max.value.w=heavy pencils
