Added in wildcard property replacements

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -364,6 +364,9 @@ panl.range.midfix.w=\ to
 panl.range.suffix.w=\ grams
 panl.range.min.value.w=from light
 panl.range.max.value.w=heavy pencils
+panl.range.min.wildcard.w=true
+panl.range.max.wildcard.w=true
+
 
 # <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
 panl.field.R=relative_weight
