--- a/mechanical-pencils.panl.lpse.length.2.properties
+++ b/mechanical-pencils.panl.lpse.length.2.properties
@@ -360,7 +360,7 @@ panl.range.facet.ww=true
 panl.range.min.ww=10
 panl.range.max.ww=50
 panl.range.prefix.ww=weighing from 
-panl.range.midfix.ww=\ to 
+panl.range.infix.ww=\ to 
 panl.range.suffix.ww=\ grams
 panl.range.min.value.ww=light
 panl.range.max.value.ww=a lot of
