--- a/src/test/resources/mechanical-pencils.panl.properties
+++ b/src/test/resources/mechanical-pencils.panl.properties
@@ -360,7 +360,7 @@ panl.range.facet.w=true
 panl.range.min.w=10
 panl.range.max.w=50
 panl.range.prefix.w=weighing from 
-panl.range.midfix.w=\ to 
+panl.range.infix.w=\ to 
 panl.range.suffix.w=\ grams
 panl.range.min.value.w=from light
 panl.range.max.value.w=heavy pencils
