--- a/panl.properties
+++ b/panl.properties
@@ -51,7 +51,8 @@ solrj.client=CloudSolrClient
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
+#solr.search.server.url=http://localhost:8983/solr,http://localhost:7574/solr
+solr.search.server.url=zookeeper:9983/solr
 
 #                      Whether To Enable The Testing URLs
 #                      ------- -- ------ --- ------- ----
