updated comments in the properties files

--- a/mechanical-pencils.panl.lpse.length.2.properties
+++ b/mechanical-pencils.panl.lpse.length.2.properties
@@ -3,19 +3,26 @@
 #                          .-----.---.-.-----.|  |                            #
 #                          |  _  |  _  |     ||  |                            #
 #                          |   __|___._|__|__||__|                            #
-#                          |__|                                               #
+#                          |__|     ... .-..                                  #
 #                                                                             #
+#                                ~ ~ ~ * ~ ~ ~                                #
 #                                                                             #
 #         COLLECTION LAST PAGE SEGMENT ENCODING (LPSE) CONFIGURATION          #
 #         ---------- ---- ---- ------- -------- ------ -------------          #
 #                                                                             #
-# This file configures the collection and field sets that connect to the Solr #
-# server.                                                                     #
+# This file configures the collection and field sets that Panl uses to        #
+# generate the query that is sent to the Solr search server.                  #
 #                                                                             #
+# It uses (L)ast (P)ath (S)egment (E)ncoding that:                            #
 #                                                                             #
-# It uses (L)ast (P)ath (S)eparator (E)ncoding which will use the URI path    #
-# and convert it to a Solr search query.  An LPSE encoded URI path will be of #
-# the following format:                                                       #
+#   1. reads the last segment of the URI path,                                #
+#   2. decodes it with the configuration contained herein,                    #
+#   3. converts it to a Solr search query,                                    #
+#   4. sends the query to the Solr Search engine,                             #
+#   5. parses the response adding additional information, and                 #
+#   6. sends the response back to the requester                               #
+#                                                                             #
+# A LPSE encoded URI path will be of the following format:                    #
 #                                                                             #
 #   /something/something-else/se/                                             #
 #                                                                             #
@@ -29,7 +36,7 @@
 #        0 1 2 3 4 5 6 7 8 9                                                  #
 #                                                                             #
 # The following are reserved characters and __MUST__ not be used as they are  #
-# modifiers that the Panl server users.                                       #
+# modifiers that the Panl server users, or are reserved for future use.       #
 #                                                                             #
 #        + - .                                                                #
 #                                ~ ~ ~ * ~ ~ ~                                #
@@ -55,12 +62,14 @@
 #                                                                             #
 # First up, the number of characters that are used for encoding of a          #
 # particular parameter must be set.  This number must then also match the     #
-# length of the codes assign to:                                              #
-#     panl.facet.*                                                            #
+# length of the codes assigned to the                                         #
+#                                                                             #
+#   panl.facet.*                                                              #
 #   panl.field.*                                                              #
 #                                                                             #
 # definitions, else a FATAL encoding error will occur and the server will not #
 # be started.  This defaults to a single character if not set - i.e.          #
+#                                                                             #
 #     panl.lpse.length=1                                                      #
 #                                                                             #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -68,8 +77,8 @@
 #                                Panl LPSE Length
 #                                ---- ---- ------
 # The length (or number of characters) for each of the LPSE codes for the
-# facet field codes and normal field codes.  This length does not apply to
-# the Panl parameters
+# facet and normal field.  This length does not apply to the Panl metadata
+# LPSE codes which are __ALWAYS__ of length 1 (one)
 #
 #                                ~ ~ ~ * ~ ~ ~
 
@@ -78,9 +87,24 @@ panl.lpse.length=2
 #                                Panl Metadata
 #                                ---- --------
 # The following are considered metadata that changes what results are returned
-# and in what format.  These are not considered facets, however they do need to
-# be the same size as the panl.lpse.length property above.  These define what
-# the query parameter will be and __MUST NOT__ be the same as any of the facets
+# and in what format.  These are not considered facets, however they
+# __DO_NOT__ conform to the panl.lpse.length property above and are __ALWAYS__
+# a constant length of 1 (one).  These define the following metadata:
+#
+#    panl.param.query - The query that is sent through to the Solr server
+#    panl.param.sort - The sort order
+#    panl.param.page - The page number
+#    panl.param.numrows - The number of results per page by default
+#    panl.param.query.operand - The Solr query operand (q.op)
+#    panl.param.passthrough - Pass through parameters which will not be passed
+#         through to the Solr search server (see property below)
+#    panl.param.passthrough.canonical - Whether to keep this URI path value in
+#         the generated canonical URI (and all URIs generated)  If not included
+#         this property defaults to false
+#
+# NOTE: The LPSE codes assigned to the metadata __MUST_NOT__ be the same as any
+#       of the facets, __OR__ start with the same letter as any of the facets
+#       if the panl.lpse.length is greater than 1
 #
 # NOTE: Both the page and numrows parameters may have a prefix and suffix
 #       assigned to them, for example:
@@ -109,13 +133,37 @@ panl.param.numrows.suffix=-per-page
 panl.param.query.operand=o
 
 panl.param.passthrough=z
+panl.param.passthrough.canonical=false
+
+#                         The Form Query To Respond To
+#                         --- ---- ----- -- ------- --
+# In the below HTML form definition, the 'q' named parameter is passed through
+# to the Panl server, which is then parsed and send through to the Solr search
+# sever as the Solr Query 'q' parameter.
+#
+# <form method="GET">
+#   <label><input type="text" name="q" /></label>
+#   <button type="submit">Search</button>
+# </form>
+#
+# You may wish to set this to something else - e.g. search, or find.
+#
+# If this property is not included, then the default value for this is 'q'
+# (without the quotes)
+#
+#                                ~ ~ ~ * ~ ~ ~
+
+panl.form.query.respondto=q
+
 
 #                     Whether to include single facets
 #                     ------- -- ------- ------ ------
 # Facets that only include a single result to further refine the query will not
-# be included by default.  The reasoning behind this is that having only one
-# defined facet does not refine the query at all, it will simply return the
-# same set of results, just with a longer LPSE URI
+# be included by default.  The reasoning behind this is that having a list of
+# facets with only one result will not refine the query at all, it will simply
+# return the same set of results, just with a longer LPSE URI.  You may wish to
+# include these results for a more verbose URL and possibly better search
+# engine visibility
 #
 # The default value for this property is false, so you do not need to include
 # it unless you wish to enable this feature, i.e.
@@ -160,14 +208,12 @@ panl.include.same.number.facets=false
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-
 solr.default.query.operand=-
-
 
 #           The Default Maximum Number Of Facet Values To Return
 #           --- ------- ------- ------ -- ----- ------ -- ------
 # This is not a required property, the default set by Solr is 100, you may
-# change this to any positive integer vale.
+# change this to any positive integer value.
 #
 #                                ~ ~ ~ * ~ ~ ~
 
@@ -196,26 +242,14 @@ solr.facet.min.count=1
 # The Solr default is 10 documents to be returned, however, this may be set to
 # any positive integer value.
 #
-# This value can also be changed per request with the LPSE encoded parameter
-# see the property:
+# This value can also be changed by the end user with the LPSE encoded
+# parameter see the property for the LPSE code that this is bound to:
 #
 #    panl.param.numrows
 #
 #                                ~ ~ ~ * ~ ~ ~
-#
-# IMPORTANT: If you have a 'facet OR' enabled for one or more of the facet
-#            fields, then you __MUST__ set this to 0 (zero) to ensure that the
-#            correct facets are returned.
-#
-# SOLR configuration variables
-#     solr.facet.min.count - the minimum number of items within each facet before
-#         the facet will be returned
-#     solr.numrows.defaulr - the default number of rows (i.e. documents to return
-#         for any query)
-#
-#                                ~ ~ ~ * ~ ~ ~
 
-solr.numrows=10
+solr.numrows.default=10
 
 #                             Panl Facet Configuration
 #                             ---- ----- -------------
@@ -227,7 +261,7 @@ solr.numrows=10
 #       <code> is the LPSE code and __MUST__ be the same length as the
 #              panl.lpse.length
 # <solr_field> is the solr field name which __MUST__ map to the Solr field
-#              name in the configuration file
+#              name in the solr schema.xml configuration file
 # <field_name> is the name of the facet in a more human friendly version, will
 #              be returned with the results, and may be used as the facet
 #              header
@@ -260,7 +294,7 @@ solr.numrows=10
 # The non-suffixed, non-prefixed URI encoding would be:
 #     /ACME Incorporated/m/
 #
-# Post processing, the URI would be the following:
+# Post processing (i.e. URL decoding), the URI would be the following:
 #     /Manufactured by ACME Incorporated // a fine company/m/
 #
 #                                ~ ~ ~ * ~ ~ ~
@@ -278,7 +312,7 @@ solr.numrows=10
 #                                ~ ~ ~ * ~ ~ ~
 #
 # You may return additional fields with a query that are either faceted or not
-# and is defined in the
+# and are defined in the
 #
 #     panl.results.fields.*
 #
@@ -498,13 +532,9 @@ panl.lpse.order=z,bb,mm,WW,GG,CC,LL,DD,hh,II,uu,ZZ,99,ww,s,p,n,o,q
 # Below are the fields that are configured to be returned for the query, these
 # fields are added to the query and must match the solr fields.
 #
-# The panl.results.fields.default always exists - even if it is not included
-# in this properties file - it is included here for reference for so that you
-# may choose the fields that you wish to have the Solr engine to return.
-#
-# If the panl.results.fields.default property is not found , or is an empty
-# string, then by default, Solr will return all fields - which you may not
-# want
+# By default, the panl.results.fields.default always exists - even if it is not
+# included in these properties file - it is included here for reference for all
+# the fields that are stored by the solr engine.
 #
 # As an example, another property:
 #
