Additional property and comments

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -530,6 +530,20 @@ panl.type.W=solr.StrField
 
 panl.lpse.order=z,b,m,W,G,C,L,D,h,I,u,Z,9,w,i,s,p,n,o,q
 
+#                        Panl LPSE Ignore Configuration
+#                        ---- ---- ------ -------------
+# Any LPSE code listed below will be ignored and not returned in either the
+# active or available filters JSON object
+#
+# This is useful when you want to use a facet for a lookup, but not allow the
+# facet to be removed.  An example usage would be when generating a link to a
+# single results (say with its id field) and the returned available facets
+# would return all of the ids as facets.
+#
+#                                ~ ~ ~ * ~ ~ ~
+
+panl.lpse.ignore=
+
 #                       Panl Results Field Configuration
 #                       ---- ------- ----- -------------
 # Below are the fields that are configured to be returned for the query, these
