--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -536,13 +536,14 @@ panl.lpse.order=z,b,m,W,G,C,L,D,h,I,u,Z,9,w,i,s,p,n,o,q
 # active or available filters JSON object
 #
 # This is useful when you want to use a facet for a lookup, but not allow the
-# facet to be removed.  An example usage would be when generating a link to a
-# single results (say with its id field) and the returned available facets
-# would return all of the ids as facets.
+# facet to be removed or returned in the list of available or active facets. An
+# example usage would be when generating a link to a single results (say with
+# its id field) and the returned available facets would return all of the ids
+# as facets.
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.lpse.ignore=
+panl.lpse.ignore=i
 
 #                       Panl Results Field Configuration
 #                       ---- ------- ----- -------------
