Added in random URI generator tester and fixed some resulting bugs

--- a/mechanical-pencils.panl.properties
+++ b/mechanical-pencils.panl.properties
@@ -172,7 +172,7 @@ panl.form.query.respondto=q
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.include.single.facets=false
+panl.include.single.facets=true
 
 #                    Whether to include same number facets
 #                    ------- -- ------- ---- ------ ------
@@ -189,7 +189,7 @@ panl.include.single.facets=false
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.include.same.number.facets=false
+panl.include.same.number.facets=true
 
 #                         The Default Query Operand
 #                         --- ------- ----- -------
