--- a/build.panl-8.gradle
+++ b/build.panl-8.gradle
@@ -1,51 +1,61 @@
 plugins {
-    id 'java'
-    id 'application'
+		id 'java'
+		id 'application'
 }
 
 group = 'com.synapticloop'
 version = '1.0.0'
 
 repositories {
-    mavenCentral()
+		mavenCentral()
 }
 
+sourceSets {
+	main {
+		java {
+			srcDirs = [ 'src' ]
+			exclude 'main/java/com/synapticloop/panl/server/client/**'
+			exclude 'test/**'
+		}
+	}
+}
+
+
 dependencies {
-    // note - the following map to the solrj dependencies
-    implementation 'org.eclipse.jetty.http2:http2-server:10.0.20'
-    implementation 'org.eclipse.jetty:jetty-servlet:10.0.20'
+		// note - the following map to the solrj dependencies
+		implementation 'org.eclipse.jetty.http2:http2-server:9.4.54.v20240208'
+		implementation 'org.eclipse.jetty:jetty-servlet:9.4.54.v20240208'
 
-    implementation 'org.slf4j:slf4j-api:2.0.13'
-    implementation 'org.slf4j:slf4j-api:2.0.13'
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
-    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
-    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
-    implementation 'org.apache.solr:solr-solrj:9.6.0'
-    implementation 'org.apache.solr:solr-solrj-zookeeper:9.6.0'
-    implementation 'commons-io:commons-io:2.16.1'
+		implementation 'org.slf4j:slf4j-api:2.0.13'
+		implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+		implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
+		implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
+		implementation 'org.apache.solr:solr-solrj:8.11.3'
+		implementation 'org.apache.zookeeper:zookeeper:3.6.2'
+		implementation 'commons-io:commons-io:2.16.1'
 
-    implementation 'org.json:json:20240303'
+		implementation 'org.json:json:20240303'
 
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+		testImplementation platform('org.junit:junit-bom:5.9.1')
+		testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 application {
-    mainClass = 'com.synapticloop.panl.Main'
+		mainClass = 'com.synapticloop.panl.Main'
 }
 
 
 
 distributions {
-    main {
-        distributionBaseName = 'panl8'
-        contents {
-            from 'src/panl8/'
-        }
-    }
+		main {
+				distributionBaseName = 'panl8'
+				contents {
+						from 'src/panl8/'
+				}
+		}
 }
 
 
 test {
-    useJUnitPlatform()
+		useJUnitPlatform()
 }
